@@ -103,7 +103,7 @@ current directory.
 .It Fl -secure-cgi Ar cgidir
 write cgi script into cgidir to realize a centralised cgi script.
 Script alias is '/cgi-bin' by default. You can overwrite this value
-with config variable 'script_alias' in global.conf.
+with config variable 'script_alias' in gtags.conf.
 .It Fl t
 .It Fl -title Ar title
 The title of this hypertext. The default is the last component of the
@@ -129,7 +129,7 @@ Tag file for function references.
 Tag file for other symbols.
 .It Pa GPATH
 Tag file for path of source files.
-.It Pa /etc/global.conf $HOME/.globalrc
+.It Pa /etc/gtags.conf $HOME/.globalrc
 Configuration file.
 .El
 .Sh ENVIRONMENT
